--- a/files/en-us/mdn/contribute/documentation_priorities/index.html
+++ b/files/en-us/mdn/contribute/documentation_priorities/index.html
@@ -166,7 +166,7 @@ tags:
 
 <h3 id="html_dom">HTML DOM (371)</h3>
 
-<div class="note notecard">
+<div class="note">
   <p><strong>Note:</strong> "HTML DOM" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other HTML DOM interfaces not in this list are in Tier 2.</p>
 </div>
 
