--- a/files/en-us/mdn/contribute/github_beginners/index.html
+++ b/files/en-us/mdn/contribute/github_beginners/index.html
@@ -313,7 +313,7 @@ nothing to commit, working tree clean</pre>
     <pre class="brush: bash">git add README.md</pre>
 
     <div class="note">
-      <p><strong>Note:</strong> <code>README.md</code> is the path to the file you have changed, not just its name. If it were inside a subdirectory, you'd have to write the full path to the file.
+      <p><strong>Note:</strong> <code>README.md</code> is the path to the file you have changed, not just its name. If it were inside a subdirectory, you'd have to write the full path to the file.</p>
     </div>
   </li>
   <li>
