--- a/files/en-us/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/index.html
+++ b/files/en-us/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/index.html
@@ -29,7 +29,7 @@ tags:
 
 <p>Let's see a simple example:</p>
 
-<div class="moreinfo">
+<div>
 <p>Click on the following square to randomly change its color:</p>
 
 <div class="hidden">
@@ -84,7 +84,7 @@ document.addEventListener('click', function (e) {
 
 <p>If you take a look at the source code of this page, you'll see the following HTML code:</p>
 
-<pre class="brush: html">&lt;div class="moreinfo"&gt;
+<pre class="brush: html">&lt;div&gt;
 &lt;p&gt;Click on the following square to randomly change its color or just type an hexadecimal code color&lt;/p&gt;
 
 &lt;div class="hidden"&gt;
@@ -152,7 +152,7 @@ document.addEventListener('click', function (e) {
 
 <p>Let's how that sample looks when configured as if it were being embedded from a remote origin:</p>
 
-<div class="moreinfo">
+<div>
 <p>Click on the following square to randomly change its color or just type a hexadecimal code color</p>
 {{EmbedLiveSample('The_example', 120, 125, '', 'MDN/Contribute/Howto/Create_an_interactive_exercise_to_help_learning_the_web/distant_example')}}</div>
 
