--- a/files/en-us/mdn/contribute/markdown_in_mdn/index.html
+++ b/files/en-us/mdn/contribute/markdown_in_mdn/index.html
@@ -123,7 +123,7 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as a highlighted box, like:</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how you write a note.</p>
   <p>It can have multiple lines.</p>
 </div>
@@ -147,7 +147,7 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as a highlighted box, like:</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> This is how you write a warning.</p>
   <p>It can have multiple paragraphs.</p>
 </div>
@@ -220,7 +220,7 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as with a code block, like:</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how you write a note.</p>
   <p>It can contain code blocks.</p>
   <pre class="brush: js">const s = "I'm in a code block";</pre>
