--- a/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
@@ -155,7 +155,7 @@ let speed = distance / time;</pre>
 let s = d/t;
 </pre>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> The only place where it is OK to not use human-readable semantic names is where a very common recognized convention exists, such as using <code>i</code>, <code>j</code>, etc. for loop iterators.</p>
 </div>
 
