--- a/files/en-us/mdn/guidelines/writing_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/writing_style_guide/index.html
@@ -204,7 +204,9 @@ tags:
   <p><strong>Note:</strong> The <strong>"Note Box"</strong> style is used to call out important notes, like this one.</p>
 </div>
 
-<div class="warning">Similarly, the <strong>"Warning Box"</strong> style creates warning boxes like this.</div>
+<div class="warning">
+  <p><strong>Warning:</strong> Similarly, the <strong>"Warning Box"</strong> style creates warning boxes like this.</p>
+</div>
 
 <p>Unless specifically instructed, <em>do not</em> use the HTML <code>style</code> attribute to manually apply a style. If you can't do it using a predefined class, ask for help in the <a href="https://discourse.mozilla.org/c/mdn">MDN discussion forum</a>.</p>
 
@@ -457,7 +459,7 @@ var toolkitProfileService = Components.classes["@mozilla.org/toolkit/profile-ser
 <p><em>A confirmation dialog appears, asking the user if they allow the Web page to make use of their Web cam.</em></p>
 
 <div class="note">
-<p><strong>Note</strong>: MDN allows the use of this very common syntax (which is controversial among usage authorities) to make up for the lack of a neutral gender in English.</p>
+<p><strong>Note:</strong> MDN allows the use of this very common syntax (which is controversial among usage authorities) to make up for the lack of a neutral gender in English.</p>
 
 <p>The use of the third-person plural as a gender neutral pronoun (that is, using "they," "them", "their," and "theirs") is an accepted practice, commonly known as "<a href="https://en.wikipedia.org/wiki/Singular_they">singular 'they.'</a>"</p>
 </div>
