--- a/files/en-us/mdn/structures/live_samples/index.html
+++ b/files/en-us/mdn/structures/live_samples/index.html
@@ -98,7 +98,7 @@ tags:
 <p>Each piece of code must be in a {{HTMLElement("pre")}} block, with a separate block for each language, properly marked as to which language it is. Most of the time, this has already been done, but it's always worth double-checking to be sure each piece of code is configured with the correct syntax. This is done with a class on the <code>&lt;pre&gt;</code> element of <code>brush:<em>language-type</em></code>, where <em>language-type</em> is the type of language the block contains, e.g. <code>html</code>, <code>css</code>, or <code>js</code>.</p>
 
 <div class="note">
-<p><strong>Note</strong>: You may have more than one block for each language; they are all concatenated together. This lets you have a chunk of code, followed by an explanation of how it works, then another chunk, and so forth. This makes it even easier to produce tutorials and the like that utilize live samples interspersed with explanatory text.</p>
+<p><strong>Note:</strong> You may have more than one block for each language; they are all concatenated together. This lets you have a chunk of code, followed by an explanation of how it works, then another chunk, and so forth. This makes it even easier to produce tutorials and the like that utilize live samples interspersed with explanatory text.</p>
 </div>
 
 <p>So make sure the {{HTMLElement("pre")}} blocks for your HTML, CSS, and/or JavaScript code are each configured correctly for that language's syntax highlighting, and you're good to go.</p>
