--- a/files/en-us/mdn/contribute/localize/index.html
+++ b/files/en-us/mdn/contribute/localize/index.html
@@ -15,7 +15,7 @@ tags:
 <h2 id="Active_locales">Active locales</h2>
 
 <div class="note">
-<p><strong>Note</strong>: If you want to contribute to one of the existing active locales get in touch with one of the active members listed below, or <a href="/en-US/docs/MDN/Contribute/Getting_started#step_4_ask_for_help">contact us for help</a>.</p>
+<p><strong>Note:</strong> If you want to contribute to one of the existing active locales get in touch with one of the active members listed below, or <a href="/en-US/docs/MDN/Contribute/Getting_started#step_4_ask_for_help">contact us for help</a>.</p>
 </div>
 
 <h3 id="Brazilian_Portuguese_pt-BR">Brazilian Portuguese (pt-BR)</h3>
