--- a/files/en-us/mdn/structures/banners_and_notices/index.html
+++ b/files/en-us/mdn/structures/banners_and_notices/index.html
@@ -17,7 +17,7 @@ tags:
 <p>To do this, you insert the macro call at the top of the article, and add the new tag to the list. Once you've done that, raise a pull request and get your changes reviewed and merged. From then on, an appropriate banner will appear on the page, and any macros that reference page tags when looking for up-to-date articles will know that the page you've updated is deprecated, or whatever.</p>
 
 <div class="note">
-  <p><strong>Note</strong>: To learn more about editing, see our <a href="https://github.com/mdn/content">content repo README</a>.</p>
+  <p><strong>Note:</strong> To learn more about editing, see our <a href="https://github.com/mdn/content">content repo README</a>.</p>
 </div>
 
 <p>Sometimes, you might want to flag just a single item in a list of items, or in a table, as obsolete, deprecated, or the like. There are special versions of each of the following macros for that; change "_header" to "_inline" to the end of the macro's name.</p>
