alright ready to go

--- a/files/en-us/mdn/at_ten/index.html
+++ b/files/en-us/mdn/at_ten/index.html
@@ -23,9 +23,8 @@ tags:
 
 {{TenthCampaignQuote}}
 
-<section id="Quick_links">
-<!-- section is rendered in sidebar -->
-<ol>
- <li><a href="/en-US/docs/MDN/At_ten/History_of_MDN">The history of MDN</a></li>
-</ol>
-</section>
+<h2 id="See_also">See also</h2>
+
+<ul>
+ <li><a href="/en-US/docs/MDN/At_ten/History_of_MDN">The history of MDN</a></li>  
+</ul>
