--- a/files/en-us/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/distant_example/index.html
+++ b/files/en-us/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/distant_example/index.html
@@ -3,7 +3,9 @@ title: distant example
 slug: >-
   MDN/Contribute/Howto/Create_an_interactive_exercise_to_help_learning_the_web/distant_example
 ---
-<div>{{MDNSidebar}}</div><div class="hiden">
+<div>{{MDNSidebar}}</div>
+
+
 <h2 id="The_example">The example</h2>
 
 <h3 id="HTML">HTML</h3>
@@ -50,7 +52,6 @@ document.addEventListener('click', function (e) {
   setColor(getRandomColor());
 });
 </pre>
-</div>
 
 <h2 id="Live_result">Live result</h2>
 
