--- a/files/en-us/mdn/about/index.html
+++ b/files/en-us/mdn/about/index.html
@@ -36,7 +36,7 @@ tags:
 
 <h4 id="Documentation_and_articles">Documentation and articles</h4>
 
-<p><strong>MDN content</strong> has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a href="https://creativecommons.org/licenses/by-sa/2.5/" rel="nofollow">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
+<p><strong>MDN content</strong> has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a href="https://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
 
 <p>When reusing MDN content, you need to ensure two things:</p>
 
@@ -77,12 +77,11 @@ tags:
 
 <p><strong>Copyright for contributed materials remains with the author unless the author assigns it to someone else</strong>.</p>
 
-<p>If you have any questions or concerns about anything discussed here, please contact <a href="mailto:mdn-admins@mozilla.org?subject=MDN%20licensing%20question" rel="nofollow">the MDN administrators</a>.</p>
+<p>If you have any questions or concerns about anything discussed here, please contact <a href="mailto:mdn-admins@mozilla.org?subject=MDN%20licensing%20question">the MDN administrators</a>.</p>
 
 <h4 id="Logos_trademarks_service_marks_and_wordmarks">Logos, trademarks, service marks and wordmarks</h4>
 
-<hr>
-<p>The rights in the trademarks, logos, and service marks of the Mozilla Foundation, as well as the look and feel of this web site, are not licensed under the Creative Commons license, and to the extent they are works of authorship (like logos and graphic design), they are not included in the work that is licensed under those terms. If you use the text of documents, and wish to also use any of these rights, or if you have any other questions about complying with our licensing terms for this collection, you should contact the Mozilla Foundation here: <a class="external text" href="mailto:licensing@mozilla.org" rel="nofollow" title="mailto:licensing@mozilla.org">licensing@mozilla.org</a>.</p>
+<p>The rights in the trademarks, logos, and service marks of the Mozilla Foundation, as well as the look and feel of this web site, are not licensed under the Creative Commons license, and to the extent they are works of authorship (like logos and graphic design), they are not included in the work that is licensed under those terms. If you use the text of documents, and wish to also use any of these rights, or if you have any other questions about complying with our licensing terms for this collection, you should contact the Mozilla Foundation here: <a href="mailto:licensing@mozilla.org" title="mailto:licensing@mozilla.org">licensing@mozilla.org</a>.</p>
 
 <h3 id="Linking_to_MDN">Linking to MDN</h3>
 
