--- a/files/en-us/mdn/structures/syntax_sections/index.html
+++ b/files/en-us/mdn/structures/syntax_sections/index.html
@@ -251,7 +251,7 @@ unshift(element0, element1, ... , elementN)
 
 <p>The "Syntax" section shows what a header's syntax will look like, using a syntax block styled using the "Syntax Box" style, including formal syntax to show exactly what directives can be included in the value, in what order, etc. For example, the {{HTTPHeader("If-None-Match")}} header's syntax block looks like this:</p>
 
-<pre class="brush: http">If-None-Match: &lt;etag_value&gt;
+<pre class="brush: html">If-None-Match: &lt;etag_value&gt;
 If-None-Match: &lt;etag_value&gt;, &lt;etag_value&gt;, …
 If-None-Match: *</pre>
 
@@ -265,7 +265,7 @@ If-None-Match: *</pre>
 
 <p>Request method syntax is really simple, just containing a syntax block styled using the "Syntax Box" style that shows how the method syntax is structured. The syntax for the <a href="/en-US/docs/Web/HTTP/Methods/GET">GET method</a> looks like this:</p>
 
-<pre class="brush: http">GET /index.html</pre>
+<pre class="brush: html">GET /index.html</pre>
 
 <h3 id="HTTP_response_status_codes">HTTP response status codes</h3>
 
